/**
 * Registry-Worker tcp binary protocol
 */
syntax = "proto3";

package registry;

/**
 * Represents packet type
 */
enum PacketType {
  INIT = 0; /// New worker connect
  PUSH_TASK = 1; /// Push task to registry
  POP_TASK = 2; /// Pop task from registry
  READY = 3; /// Ready for receiving tasks
}

/**
 * Represents protocol packet
 */
message Packet {
  PacketType type = 1; /// Type of packet(action)
  /**
   * Represents packet payload
   */
  message Payload {
    string worker = 1; /// Worker name
    string id = 2; /// Worker id
    map<string, string> task = 3; /// Worker task
  }
  Payload message = 2; /// Packet message
}
